# slide-show-rs

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: codeql.yml  rust.yml
src/: main.rs  tests.rs
