[package]
name = "slide-show-rs"
version = "0.1.0"
authors = ["yammmt <cu.cs.y20@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "^0.15"
glob = "^0.3"
image = "^0.23"
log = "^0.4"
minifb = "^0.24"
num_cpus = "^1.16"
rand = "^0.8"
rayon = "^1.7"
simple_logger = "^4.2"
