[package]
name = "slide-show-rs"
version = "0.1.0"
authors = ["yammmt <cu.cs.y20@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "^0.15"
glob = "^0.3"
image = "^0.25"
log = "^0.4"
minifb = "^0.28"
rand = "^0.9"
rayon = "^1.10"
simple_logger = "^5.1"
